# dma

./: .gitignore  README.md
dfparser/: AUTHORS.md  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
dfparser/dfparser/: __init__.py  alias.py  association.py  config.py  parse.py  tag.py
dfparser/dfparser/data/: config.toml  default.aliases  dma_voc.xlsx  engine_jaccard.csv
dfparser/example/: parse_malgenome.py
dfparser/example/data/: dfparser_malgenome_top3.xlsx  malgenome.gold  malgenome_meta_sha256_family.csv
qvote/: README.md  pyproject.toml
qvote/example/: qvote_malgenome.py
qvote/example/data/: dsmodel_malgenome_20211115_report.xlsx  malgenome.resp  malgenome_qvote_0.5_report.xlsx  malgenome_sha256_engine_family.json
qvote/qvote/: common.py  evaluation.py  io.py
qvote/qvote/model/: __init__.py  ds.py  vote.py
