[tool.poetry]
name = "dfparser"
version = "0.1.0"
description = "Deterministic Family Parsing"
authors = ["jyker <jyk.kongkong@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.3"
openpyxl = "^3.0.9"
toml = "^0.10.2"
pyparsing = "^2.4.7"
loguru = "^0.5.3"
codetiming = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"